@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +22,6 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.collectionpipeline;
 
 import java.util.Comparator;
@@ -55,7 +56,7 @@ public class FunctionalProgramming {
   public static List<String> getModelsAfter2000(List<Car> cars) {
     return cars.stream().filter(car -> car.getYear() > 2000)
         .sorted(Comparator.comparing(Car::getYear))
-        .map(Car::getModel).collect(Collectors.toList());
+        .map(Car::getModel).toList();
   }
 
   /**
@@ -77,6 +78,6 @@ public class FunctionalProgramming {
   public static List<Car> getSedanCarsOwnedSortedByDate(List<Person> persons) {
     return persons.stream().map(Person::getCars).flatMap(List::stream)
         .filter(car -> Category.SEDAN.equals(car.getCategory()))
-        .sorted(Comparator.comparing(Car::getYear)).collect(Collectors.toList());
+        .sorted(Comparator.comparing(Car::getYear)).toList();
   }
 }
