@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,13 +22,10 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.fanout.fanin;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
-
 import lombok.extern.slf4j.Slf4j;
 
 
@@ -61,7 +60,7 @@ public class App {
     LOGGER.info("Numbers to be squared and get sum --> {}", numbers);
 
     final List<SquareNumberRequest> requests =
-        numbers.stream().map(SquareNumberRequest::new).collect(Collectors.toList());
+        numbers.stream().map(SquareNumberRequest::new).toList();
 
     var consumer = new Consumer(0L);
 
