@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,12 +22,9 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.leaderelection;
 
-import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Abstract class of all the message manager classes.
@@ -55,13 +54,13 @@ public abstract class AbstractMessageManager implements MessageManager {
         .stream()
         .filter((i) -> i > currentId && instanceMap.get(i).isAlive())
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
     if (candidateList.isEmpty()) {
       var index = instanceMap.keySet()
           .stream()
           .filter((i) -> instanceMap.get(i).isAlive())
           .sorted()
-          .collect(Collectors.toList())
+          .toList()
           .get(0);
       result = instanceMap.get(index);
     } else {
