@@ -1,6 +1,8 @@
 /*
+ * This project is licensed under the MIT license. Module model-view-viewmodel is using ZK framework licensed under LGPL (see lgpl-3.0.txt).
+ *
  * The MIT License
- * Copyright © 2014-2021 Ilkka Seppälä
+ * Copyright © 2014-2022 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,7 +22,6 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
-
 package com.iluwatar.leaderelection.bully;
 
 import com.iluwatar.leaderelection.AbstractMessageManager;
@@ -29,7 +30,6 @@ import com.iluwatar.leaderelection.Message;
 import com.iluwatar.leaderelection.MessageType;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 /**
  * Implementation of BullyMessageManager.
@@ -114,7 +114,7 @@ public class BullyMessageManager extends AbstractMessageManager {
     return instanceMap.keySet()
         .stream()
         .filter((i) -> i < currentId && instanceMap.get(i).isAlive())
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
